2007-08-21  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== xdg-user-dirs 0.9 ===

2007-08-21  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.ac:
	Bump version to 0.9

2007-08-20  Alexander Larsson  <alexl@redhat.com>

	* xdg-user-dirs-update.c (get_config_files):
	Don't free getenv data

2007-07-26  Alexander Larsson  <alexl@redhat.com>

	* xdg-user-dirs-update.c:
	Look for translations in XDG_DATA_DIRS if localedir doesn't exist.
	This is useful for relocatable builds.
	Patch from Lei Zhang <thestig@google.com>

2007-06-11  Alexander Larsson  <alexl@redhat.com>

	* xdg-user-dirs-update.c: (save_user_dirs), (create_dirs):
	More fixed for NULL dirs

2007-06-11  Alexander Larsson  <alexl@redhat.com>

	* xdg-user-dirs-update.c: (find_dir):
	Handle dir being NULL.
	Reported by Daniel Macks

2007-05-16  Alexander Larsson  <alexl@redhat.com>

	* xdg-user-dirs-update.c (load_user_dirs):
	Remove debug spew
	
	* configure.ac: 
	* NEWS:
	Update for 0.8

=== xdg-user-dirs 0.7 ===

2007-05-16  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.ac:
	Update for 0.7

2007-05-16  Alexander Larsson  <alexl@redhat.com>

	* xdg-user-dirs-update.c:
	Handle keys set to $HOME without recreating the original dir.

=== xdg-user-dirs 0.6 ===

2007-04-11  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

	* configure.ac:
	Bump version to 0.6

2007-04-11  Alexander Larsson  <alexl@redhat.com>

	* xdg-user-dir-lookup.c:
	Add xdg_user_dir_lookup_with_fallback
	Add doc strings
	
2007-04-11  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am (INCLUDES): 
	* xdg-user-dir-lookup.c:
	Allow xdg-user-dir-lookup.c to be included without modifications
	Define STANDALONE_XDG_USER_DIR_LOOKUP to include main

2007-04-11  Alexander Larsson  <alexl@redhat.com>

	* xdg-user-dirs-update.c (create_dirs):
	Print out correct directory on --force

=== xdg-user-dirs 0.5 ===

2007-03-26  Alexander Larsson  <alexl@redhat.com>
